--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,23 +1,26 @@
 /*---------- CARD ----------*/
+main {
+  position: relative;
+}
 .card {
   background-color: #fff;
-  width: Min (80%, 73rem);
+  width: Min (85%, 73rem);
+  height: 28rem;
   display: flex;
   border-radius: 10px;
   box-shadow: 0 4rem 4rem -1rem rgba(201, 213, 225, 0.503415);
+  overflow: hidden;
 }
 
 .card-img {
-  max-width: 28.5rem;
-
   img {
-    width: 100%;
+    height: 100%;
   }
 }
 
 .text-container {
   padding: 3.2rem 4rem;
-  max-width: 36.5rem;
+  max-width: 44.5rem;
 
   h1 {
     font-size: 2rem;
@@ -33,7 +36,8 @@
 .author-container {
   display: flex;
   justify-content: space-between;
-  margin-top: 2rem;
+  align-items: center;
+  margin-top: 3rem;
 
   .author {
     display: flex;
@@ -64,40 +68,65 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+      background-color: $color-primary-light;
+    }
 
     .share-icon {
-      width: 50%;
+      filter: brightness(100%);
+
+      &:hover {
+        filter: brightness(200%) grayscale(100%);
+      }
     }
   }
+}
 
-  .share-container {
-    background-color: $color-primary;
-    display: flex;
-    height: 6.4rem;
-    gap: 2rem;
-    padding: 1.8rem 3.6rem;
+.share-container {
+  background-color: $color-primary;
+  display: flex;
+  align-items: center;
+  height: 6.4rem;
+  gap: 2rem;
+  padding: 1.8rem 3.6rem;
+  position: absolute;
+  bottom: 35%;
+  right: -8.5%;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px rgba(201, 213, 225, 0.503415);
+
+  &::after {
+    content: "";
     position: absolute;
-    top: -250%;
-    // clip-path: polygon(
-    //   0% 0%,
-    //   100% 0%,
-    //   100% 75%,
-    //   55% 75%,
-    //   50% 100%,
-    //   45% 75%,
-    //   0% 75%
-    // );
+    left: 0;
+    right: 0;
+    top: 60px;
+    width: 0;
+    height: 0;
+    margin-inline: auto;
+    border-top: 15px solid $color-primary;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+  }
 
-    .share-text {
-      color: $color-primary-light-2;
-      text-transform: uppercase;
-    }
+  &.hidden {
+    display: none;
+  }
 
-    .icon {
-      width: 2rem;
-      height: 2rem;
-    }
+  .share-text {
+    color: $color-primary-light-2;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    cursor: pointer;
+  }
+
+  .icon {
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
   }
 }
 
