--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,7 +4,7 @@ main {
 }
 .card {
   background-color: #fff;
-  width: Min (85%, 73rem);
+  width: 100%;
   height: 28rem;
   display: flex;
   border-radius: 10px;
