--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,17 +4,21 @@ main {
 }
 .card {
   background-color: #fff;
-  width: 100%;
+  width: Min(90%, 73rem);
   height: 28rem;
   display: flex;
   border-radius: 10px;
   box-shadow: 0 4rem 4rem -1rem rgba(201, 213, 225, 0.503415);
   overflow: hidden;
 }
-
 .card-img {
+  overflow: hidden;
+  width: Min(90%, 28.5rem);
+
   img {
     height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
 }
 
@@ -79,7 +83,8 @@ main {
       filter: brightness(100%);
 
       &:hover {
-        filter: brightness(200%) grayscale(100%);
+        filter: brightness(0%) grayscale(100%) invert(100%) sepia(71%)
+          saturate(3%) hue-rotate(236deg) brightness(105%) contrast(100%);
       }
     }
   }
@@ -94,7 +99,7 @@ main {
   padding: 1.8rem 3.6rem;
   position: absolute;
   bottom: 35%;
-  right: -8.5%;
+  right: 1.5%;
   border-radius: 10px;
   box-shadow: 0px 10px 10px rgba(201, 213, 225, 0.503415);
 
