--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,18 @@ main {
 
 .card {
   background-color: #fff;
-  width: 100%;
+  width: Min(90%, 73rem);
   height: 28rem;
   display: flex;
   border-radius: 10px;
   box-shadow: 0 4rem 4rem -1rem rgba(201, 213, 225, 0.503415);
   overflow: hidden; }
 
-.card-img img {
-  height: 100%; }
+.card-img {
+  overflow: hidden;
+  width: Min(90%, 28.5rem); }
+  .card-img img {
+    height: 100%; }
 
 .text-container {
   padding: 3.2rem 4rem;
@@ -78,7 +81,7 @@ main {
     .author-container .share-icon-box .share-icon {
       filter: brightness(100%); }
       .author-container .share-icon-box .share-icon:hover {
-        filter: brightness(200%) grayscale(100%); }
+        filter: brightness(0%) grayscale(100%) invert(100%) sepia(71%) saturate(3%) hue-rotate(236deg) brightness(105%) contrast(100%); }
 
 .share-container {
   background-color: #48556a;
@@ -89,7 +92,7 @@ main {
   padding: 1.8rem 3.6rem;
   position: absolute;
   bottom: 35%;
-  right: -8.5%;
+  right: 1.5%;
   border-radius: 10px;
   box-shadow: 0px 10px 10px rgba(201, 213, 225, 0.503415); }
   .share-container::after {
@@ -147,9 +150,10 @@ main {
     .text-container p {
       font-size: 1.3rem; }
   .author-container {
-    margin-top: 4rem; }
+    margin-top: 4.5rem; }
   .share-container {
     width: 100%;
+    height: 8rem;
     right: 0;
     bottom: 0%;
     border-radius: 0;
