--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -25,11 +25,12 @@
   }
 
   .author-container {
-    margin-top: 4rem;
+    margin-top: 4.5rem;
   }
 
   .share-container {
     width: 100%;
+    height: 8rem;
     right: 0;
     bottom: 0%;
     border-radius: 0;
